[gd_scene load_steps=4 format=3 uid="uid://c30hctbunqic1"]

[ext_resource type="Script" uid="uid://drdhrlnwyp1to" path="res://death_screen.gd" id="1_ex68u"]
[ext_resource type="FontFile" uid="uid://wqrno8lackrm" path="res://gui/kenney_mini_square.ttf" id="1_if853"]
[ext_resource type="AudioStream" uid="uid://xwt2mbp1nbrm" path="res://assets/brackeys_platformer_assets/sounds/You_Lose.wav" id="3_6bi5g"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ex68u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7607843)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_if853")
theme_override_font_sizes/font_size = 48
text = "You Died :("

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="TryAgainButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_if853")
theme_override_font_sizes/font_size = 32
text = "Try Again"

[node name="QuitButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_if853")
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="YouLost" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6bi5g")

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
